--- a/snippets/data.mdx
+++ b/snippets/data.mdx
@@ -1616,7 +1616,7 @@ export const appCategories = [
   },
   {
     id: "solana",
-    label: "Solana Networks (8)",
+    label: "Solana Networks (6)",
     items: [
       {
         id: "solana-mainnet",
@@ -1664,7 +1664,7 @@ export const appCategories = [
   },
   {
     id: "other",
-    label: "Other VMs (10+)",
+    label: "Other VMs (5)",
     items: [
       {
         id: "starknet-mainnet",
