--- a/en/home.mdx
+++ b/en/home.mdx
@@ -1,143 +1,341 @@
 ---
-title: "SQD Documentation"
 mode: "custom"
-description: "Explore our SDKs, Cloud platform, and decentralized network for blockchain data indexing."
 ---
+
+export function openSearch() {
+  document.getElementById("search-bar-entry").click();
+}
 
 import { Container, Title } from "/snippets/utility.mdx";
 import { ProductTiles } from "/snippets/product-tiles.mdx";
 import { appCategories } from "/snippets/data.mdx";
 import { ProductCard } from "/snippets/product-cards.mdx";
 
-<div className="px-5 divide-y divide-gray-100 dark:divide-white/10">
-  <Container>
-    <div className="w-full flex flex-col">
-      <div className="flex flex-col items-start justify-center w-full max-w-4xl text-left">
-        <div
-          className="text-gray-900 dark:text-gray-200 text-4xl tracking-tight"
-        >
-          SQD Documentation
-        </div>
-        <p
-          className="text-md text-gray-600 dark:text-gray-400 text-left mt-3 mb-4"
-        >
-          Explore our SDKs, Cloud platform, and decentralized network for blockchain data indexing.
-        </p>
-        <div className="flex flex-row gap-4 mt-5">
-        <a href="/get-started/quickstart">
-          <button
-            type="button"
-            className="px-5 flex items-center font-medium text-sm rounded-full py-2 shadow-sm text-white dark:text-gray-900 bg-primary-dark dark:bg-primary-light hover:opacity-[0.9] hover:bg-primary justify-center"
-          >
-            Get started
-            <svg
-              className="size-3 ml-2 bg-white dark:bg-gray-900"
-              style={{
-                maskImage: 'url("https://mintlify.b-cdn.net/solid/arrow-right-long.svg")',
-                maskRepeat: 'no-repeat',
-                maskPosition: 'center center'
-              }}
-            />
-          </button>
-          </a>
-        </div>
-      </div>
-    </div>
-
-  </Container>
-   <Container>
-    <div className="flex flex-col w-full mb-8">
-      <div className="flex items-center justify-between w-full">
-        <Title>
-          SQD Products {/* Updated */}
-        </Title>
-      </div>
-      <p
-        className="text-[#5B616E] dark:text-gray-300 text-md mb-1 mt-3"
-      >
-        Choose the right tool for your blockchain data indexing needs.
-      </p>
-    </div>
-    <CardGroup cols={3}>
-        <ProductCard
-        title="TypeScript SDK"
-        description="Build indexers with TypeScript for any blockchain"
-        href="/sdk"
-        icon="https://avatars.githubusercontent.com/u/108554348?s=280&v=4"
-        category="Development"
-        status="Stable"
-        />
-        <ProductCard
-          title="SQD Cloud"
-          description="Deploy and scale your indexers in the cloud"
-          href="/cloud"
-          icon="https://avatars.githubusercontent.com/u/108554348?s=280&v=4"
-          category="Infrastructure"
-          status="Production"
-        />
-          <ProductCard
-          title="Network Overview"
-          description="Learn about the SQD decentralized data network"
-          href="/network"
-          icon="https://avatars.githubusercontent.com/u/108554348?s=280&v=4"
-          category="Network"
-          status="Coming Soon"
-        />
-    </CardGroup>
-    <ul class="not-prose pb-[1px] h-1 min-w-full mt-3 overflow-auto" />
-  </Container>
-  <Container>
-    <div className="flex flex-col w-full mb-8">
-      <div className="flex items-center justify-between w-full">
-        <Title>
-          Supported Networks
-        </Title>
-      </div>
-      <p
-        className="text-[#5B616E] dark:text-gray-300 text-md mb-1 mt-3"
-      >
-        Explore the 250+ blockchain networks supported by SQD.
-      </p>
-    </div>
-    <ProductTiles categories={appCategories} />
-    <ul class="not-prose pb-[1px] h-1 min-w-full mt-3 overflow-auto" />
-  </Container>
-
-  <Container>
-    <div className="flex flex-col w-full mb-5">
-    <Title>
-      Resources
-    </Title>
-
+<div className="relative w-full flex items-center justify-center" style={{ height: '26rem', overflow: 'hidden'}}>
+  <div className="absolute inset-0 z-0 flex items-center bg-gradient-to-br from-blue-400 to-blue-800 dark:from-blue-900 dark:to-blue-950 mix-blend-normal">
+    <div style={{ height: '100%', width: '100%', maxHeight: '465px' }} />
   </div>
-  <Columns cols={3}>
-    <Card
-      title="We're Hiring"
-      icon={<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M20 6h-2l-2-2H8L6 6H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2zm-8 13c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.65 0-3 1.35-3 3s1.35 3 3 3 3-1.35 3-3-1.35-3-3-3z" fill="currentColor"/>
-      </svg>}
-      href="https://sqd.ai/about"
+  <div className="relative z-10" style={{ position: 'absolute', textAlign: 'center', padding: '0 1rem', width: '100%' }}>
+    <div
+      className="text-white"
+      style={{
+       fontWeight: '600',
+       fontSize: 'clamp(28px, 8vw, 42px)',
+       margin: '0',
+       marginBottom: '1.5rem',
+       textAlign: 'center'
+      }}
     >
-    Join our team and help build the future of blockchain data indexing
-    </Card>
-    <Card
-      title="Join our Community"
-      icon={<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 2C13.6569 2 15 3.34315 15 5C15 6.65685 13.6569 8 12 8C10.3431 8 9 6.65685 9 5C9 3.34315 10.3431 2 12 2ZM20.2929 20.2929L16.7071 16.7071C17.4692 15.9450 18 14.9346 18 13.8C18 11.0147 15.7853 8.8 13 8.8C10.2147 8.8 8 11.0147 8 13.8C8 16.5853 10.2147 18.8 13 18.8C14.0346 18.8 15.0450 18.4692 15.8071 17.7071L19.2929 21.1929C19.6834 21.5834 20.3166 21.5834 20.7071 21.1929C21.0976 20.8024 21.0976 20.1692 20.7071 19.7787L20.2929 20.2929ZM13 16.8C11.3431 16.8 10 15.4569 10 13.8C10 12.1431 11.3431 10.8 13 10.8C14.6569 10.8 16 12.1431 16 13.8C16 15.4569 14.6569 16.8 13 16.8Z" fill="currentColor"/>
-        </svg>}
-      href="https://t.me/hydradevs"
+      Build with SQD
+    </div>
+    <p
+      className="text-white text-opacity-90"
+      style={{
+        margin: '0 auto',
+        marginBottom: '2rem',
+        fontWeight: '500',
+        fontSize: 'clamp(16px, 4vw, 24px)',
+        maxWidth: '42rem',
+        textAlign: 'center'
+      }}
     >
-    Get help with your indexing projects and meet fellow developers
-    </Card>
-    <Card
-      title="GitHub Repository"
-      icon={<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M12 0C5.374 0 0 5.373 0 12C0 17.302 3.438 21.8 8.207 23.387C8.806 23.498 9 23.126 9 22.81V20.576C5.662 21.302 4.967 19.16 4.967 19.16C4.421 17.773 3.634 17.404 3.634 17.404C2.545 16.659 3.717 16.675 3.717 16.675C4.922 16.759 5.556 17.912 5.556 17.912C6.626 19.746 8.363 19.216 9.048 18.909C9.155 18.134 9.466 17.604 9.81 17.305C7.145 17 4.343 15.971 4.343 11.374C4.343 10.063 4.812 8.993 5.579 8.153C5.455 7.85 5.044 6.629 5.696 4.977C5.696 4.977 6.704 4.655 8.997 6.207C9.954 5.941 10.98 5.808 12 5.803C13.02 5.808 14.047 5.941 15.006 6.207C17.297 4.655 18.303 4.977 18.303 4.977C18.956 6.63 18.545 7.851 18.421 8.153C19.191 8.993 19.656 10.064 19.656 11.374C19.656 15.983 16.849 16.998 14.177 17.295C14.607 17.667 15 18.397 15 19.517V22.81C15 23.129 15.192 23.504 15.801 23.386C20.566 21.797 24 17.3 24 12C24 5.373 18.627 0 12 0Z" fill="currentColor"/>
-        </svg>}
-      href="https://github.com/subsquid"
+      The complete blockchain data indexing platform with TypeScript SDKs, cloud deployment, and decentralized network infrastructure.
+    </p>
+    <div className="flex items-center justify-center">
+    <button
+      type="button"
+      className="hidden w-full lg:flex items-center text-sm leading-6 rounded-lg py-1.5 pl-2.5 pr-3 shadow-sm text-gray-400 dark:text-white/50 bg-background-light dark:bg-background-dark dark:brightness-[1.1] dark:ring-1 dark:hover:brightness-[1.25] ring-1 ring-gray-400/20 hover:ring-gray-600/25 dark:ring-gray-600/30 dark:hover:ring-gray-500/30 focus:outline-primary"
+      id="home-search-entry"
+      style={{
+        maxWidth: '28rem',
+      }}
+      onClick={openSearch}
     >
-    Explore our open-source codebase and contribute to the project
-    </Card>
-  </Columns>
-  </Container>
+      <svg
+        className="h-4 w-4 ml-1.5 flex-none bg-gray-500 hover:bg-gray-600 dark:bg-white/50 dark:hover:bg-white/70"
+        style={{
+        marginRight: '0.5rem',
+         maskImage:
+           'url("https://mintlify.b-cdn.net/v6.5.1/solid/magnifying-glass.svg")',
+         maskRepeat: 'no-repeat',
+         maskPosition: 'center center',
+        }}
+      />
+      Search documentation or ask a question
+    </button>
+    </div>
+  </div>
+</div>
+<div
+  style={{marginTop: '2rem', marginBottom: '8rem', maxWidth: '70rem', marginLeft: 'auto',
+  marginRight: 'auto', paddingLeft: '1.25rem',
+  paddingRight: '1.25rem' }}
+>
+<h2 className="text-center text-gray-900 dark:text-white text-4xl font-bold mb-8" style={{ fontSize: '1.5rem', marginTop: '6rem', marginBottom: '2.5rem' }}>
+SQD Products
+</h2>
+<CardGroup cols={3}>
+  <Card title="TypeScript SDK" href="/en/sdk/getting-started/quickstart" arrow={false}>
+    <div className="mb-4">
+      <div className="w-full h-32 bg-gradient-to-br from-blue-100 to-blue-200 dark:from-blue-900 dark:to-blue-800 rounded-lg flex items-center justify-center">
+        <svg className="w-16 h-16 text-blue-600 dark:text-blue-300" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M3 3h18v18H3V3zm16 16V5H5v14h14zM7 7h10v2H7V7zm0 4h10v2H7v-2zm0 4h7v2H7v-2z"/>
+        </svg>
+      </div>
+    </div>
+    Build blockchain data indexers with TypeScript for EVM, Substrate, Solana, and more.
+  </Card>
+  <Card title="SQD Cloud" href="/en/cloud/overview" arrow={false}>
+    <div className="mb-4">
+      <div className="w-full h-32 bg-gradient-to-br from-green-100 to-green-200 dark:from-green-900 dark:to-green-800 rounded-lg flex items-center justify-center">
+        <svg className="w-16 h-16 text-green-600 dark:text-green-300" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/>
+        </svg>
+      </div>
+    </div>
+    Deploy and scale your indexers with managed infrastructure and monitoring.
+  </Card>
+  <Card title="SQD Network" href="/en/network/overview" arrow={false}>
+    <div className="mb-4">
+      <div className="w-full h-32 bg-gradient-to-br from-purple-100 to-purple-200 dark:from-purple-900 dark:to-purple-800 rounded-lg flex items-center justify-center">
+        <svg className="w-16 h-16 text-purple-600 dark:text-purple-300" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+        </svg>
+      </div>
+    </div>
+    Access decentralized data infrastructure with the SQD Network protocol.
+  </Card>
+</CardGroup>
+<h2
+  className="text-center text-gray-900 dark:text-white text-4xl font-bold mb-8"
+  style={{ fontSize: "1.5rem", marginTop: "6rem", marginBottom: "2.5rem" }}
+>
+  Features
+</h2>
+<div className="bg-gray-50 dark:bg-gray-900 rounded-xl p-8 my-12">
+  <div className="text-center">
+    <div className="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-lg flex items-center justify-center mx-auto mb-4">
+      <svg className="w-8 h-8 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+      </svg>
+    </div>
+    <h3 className="text-xl font-semibold text-gray-900 dark:text-white mb-2">
+      Key Features Placeholder
+    </h3>
+  </div>
+</div>
+
+<h2
+  className="text-center text-gray-900 dark:text-white text-4xl font-bold mb-8"
+  style={{ fontSize: "1.5rem", marginTop: "6rem", marginBottom: "2.5rem" }}
+>
+  Supported Virtual Machines
+</h2>
+<div className="grid grid-cols-2 md:grid-cols-4 gap-4 mb-8">
+  <a href="/en/sdk/getting-started/quickstart" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-blue-300 dark:hover:border-blue-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-blue-100 to-blue-200 dark:from-blue-900 dark:to-blue-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-blue-600 dark:text-blue-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-blue-600 dark:group-hover:text-blue-400">
+        EVM
+      </h3>
+    </div>
+  </a>
+  <a href="/en/sdk/solana/quickstart" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-purple-300 dark:hover:border-purple-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-purple-100 to-purple-200 dark:from-purple-900 dark:to-purple-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-purple-600 dark:text-purple-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-purple-600 dark:group-hover:text-purple-400">
+        Solana
+      </h3>
+    </div>
+  </a>
+  <a href="/en/sdk/substrate/tutorials/substrate" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-pink-300 dark:hover:border-pink-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-pink-100 to-pink-200 dark:from-pink-900 dark:to-pink-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-pink-600 dark:text-pink-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-pink-600 dark:group-hover:text-pink-400">
+        Substrate
+      </h3>
+    </div>
+  </a>
+  <a href="/en/sdk/fuel/fuel-datasource" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-orange-300 dark:hover:border-orange-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-orange-100 to-orange-200 dark:from-orange-900 dark:to-orange-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-orange-600 dark:text-orange-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-orange-600 dark:group-hover:text-orange-400">
+        Fuel
+      </h3>
+    </div>
+  </a>
+  <a href="/en/sdk/tron/quickstart" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-indigo-300 dark:hover:border-indigo-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-indigo-100 to-indigo-200 dark:from-indigo-900 dark:to-indigo-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-indigo-600 dark:text-indigo-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-indigo-600 dark:group-hover:text-indigo-400">
+        Tron
+      </h3>
+    </div>
+  </a>
+  <a href="/en/sdk/starknet/quickstart" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-cyan-300 dark:hover:border-cyan-600 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-cyan-100 to-cyan-200 dark:from-cyan-900 dark:to-cyan-800 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-cyan-600 dark:text-cyan-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-cyan-600 dark:group-hover:text-cyan-400">
+        Starknet
+      </h3>
+    </div>
+  </a>
+  <div className="group block cursor-not-allowed">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 transition-all duration-200 opacity-60 relative">
+      <div className="w-full h-24 bg-gradient-to-br from-gray-100 to-gray-200 dark:from-gray-700 dark:to-gray-600 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-gray-500 dark:text-gray-400"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-500 dark:text-gray-400 text-center">
+        Hyperliquid
+      </h3>
+      <div className="absolute top-2 right-2">
+        <span className="inline-flex items-center px-2 py-1 rounded-full text-xs font-medium bg-gray-100 text-gray-600 dark:bg-gray-700 dark:text-gray-300">
+          Soon
+        </span>
+      </div>
+    </div>
+  </div>
+  <a href="/en/data/networks" className="group block">
+    <div className="bg-white dark:bg-gray-800 rounded-xl p-6 border border-gray-200 dark:border-gray-700 hover:border-gray-400 dark:hover:border-gray-500 transition-all duration-200 hover:shadow-lg">
+      <div className="w-full h-24 bg-gradient-to-br from-gray-100 to-gray-200 dark:from-gray-700 dark:to-gray-600 rounded-lg flex items-center justify-center mb-4">
+        <svg
+          className="w-12 h-12 text-gray-600 dark:text-gray-300"
+          viewBox="0 0 24 24"
+          fill="currentColor"
+        >
+          <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z" />
+        </svg>
+      </div>
+      <h3 className="font-semibold text-gray-900 dark:text-white text-center group-hover:text-gray-600 dark:group-hover:text-gray-400">
+        View All 225+ Networks
+      </h3>
+    </div>
+  </a>
+</div>
+<h2
+  className="text-center text-gray-900 dark:text-white text-4xl font-bold mb-8"
+  style={{ fontSize: "1.5rem", marginTop: "6rem", marginBottom: "2.5rem" }}
+>
+  Benchmarks
+</h2>
+<div className="bg-gray-50 dark:bg-gray-900 rounded-xl p-8 my-12">
+  <div className="text-center">
+    <div className="w-16 h-16 bg-gray-200 dark:bg-gray-700 rounded-lg flex items-center justify-center mx-auto mb-4">
+      <svg className="w-8 h-8 text-gray-500 dark:text-gray-400" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"/>
+      </svg>
+    </div>
+    <h3 className="text-xl font-semibold text-gray-900 dark:text-white mb-2">
+      Performance Benchmarks
+    </h3>
+    <p className="text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">
+      Coming soon: Comprehensive performance benchmarks comparing SQD with other indexing solutions across different networks and use cases.
+    </p>
+  </div>
+</div>
+<h2
+  className="text-center text-gray-900 dark:text-white text-4xl font-bold mb-8"
+  style={{ fontSize: "1.5rem", marginTop: "6rem", marginBottom: "2.5rem" }}
+>
+  Learn More
+</h2>
+<CardGroup cols={3}>
+  <Card
+    title="Community"
+    icon="users"
+    href="https://t.me/hydradevs"
+    arrow={false}
+  >
+    Join our Telegram community for support and discussions.
+  </Card>
+  <Card
+    title="API Reference"
+    icon="code"
+    href="/en/api-reference/evm"
+    arrow={false}
+  >
+    Complete API documentation for all supported networks.
+  </Card>
+  <Card
+    title="FAQ"
+    icon="question-mark-circle"
+    href="/en/network/faq"
+    arrow={false}
+  >
+    Frequently asked questions about SQD and blockchain indexing.
+  </Card>
+</CardGroup>
+
+<div className="flex justify-center mt-12 mb-4">
+  <a
+    href="https://github.com/subsquid/squid-sdk"
+    target="_blank"
+    rel="noopener noreferrer"
+    className="group inline-flex items-center justify-center w-12 h-12 rounded-full bg-white dark:bg-background-dark transition-all hover:scale-110 hover:border-primary dark:hover:border-primary-light"
+  >
+    <svg
+      className="h-6 w-6 bg-primary dark:bg-primary-light transition-colors group-hover:bg-white"
+      style={{
+        maskImage: 'url("https://mintlify.b-cdn.net/v6.6.0/brands/github.svg")',
+        maskRepeat: "no-repeat",
+        maskPosition: "center center",
+      }}
+    ></svg>
+  </a>
+</div>
+
 </div>
